Fixed spacing between slides

--- a/src/app/components/Carousels/ExcursionsCarousel/excursionCarousel.scss
+++ b/src/app/components/Carousels/ExcursionsCarousel/excursionCarousel.scss
@@ -16,6 +16,7 @@
       display: flex;
       flex-direction: row;
       &__slide {
+        margin: 0 5px 0 5px;
         display: flex;
         justify-content: center;
         overflow: hidden;
